--- a/views/footer.html
+++ b/views/footer.html
@@ -1,9 +1,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/libs/jquery/jquery-1.8.0.min.js"><\/script>')</script>
 
-        <script src="/js/libs/bootstrap/bootstrap.min.js"></script>
-        <script src="/js/libs/d3/d3.v2.min.js"></script>
+        <script src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/js/libs/bootstrap/bootstrap.min.js"></script>
+        <script src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/js/libs/d3/d3.v2.min.js"></script>
 
-        <script src="/js/sitio.js"></script>
+        <script src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/js/sitio.js"></script>
     </body>
 </html>
