--- a/views/header.html
+++ b/views/header.html
@@ -6,17 +6,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="/css/libs/bootstrap/bootstrap.css">
-        <link rel="stylesheet" href="/css/libs/bootstrap/bootstrap-responsive.css">
+        <link rel="stylesheet" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/css/bootstrap.css">
+        <link rel="stylesheet" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/css/bootstrap-responsive.css">
 
-        <link rel="stylesheet" href="/css/sitio.css">
+        <link rel="stylesheet" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/css/sitio.css">
 
         <link rel="shortcut icon" href="/ico/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/ico/apple-touch-icon-57-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/ico/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/ico/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/ico/apple-touch-icon-precomposed.png">
     </head>
     <body>
         
