--- a/views/index.html
+++ b/views/index.html
@@ -18,14 +18,14 @@
                     <div id="myCarousel" class="carousel slide">
                         <!-- Carousel items -->
                         <div class="carousel-inner">
-                            <div class="active item"><img src="/img/sitio/IMG_7714.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7715.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7717.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7718.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7721.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7723.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7724.jpg" alt=""></div>
-                            <div class="item"><img src="/img/sitio/IMG_7726.jpg" alt=""></div>
+                            <div class="active item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7714.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7715.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7717.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7718.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7721.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7723.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7724.jpg" alt=""></div>
+                            <div class="item"><img src="https://s3-sa-east-1.amazonaws.com/sitio-do-chicao/img/sitio/IMG_7726.jpg" alt=""></div>
                         </div>
                         <!-- Carousel nav -->
                         <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
